--- a/pom.xml
+++ b/pom.xml
@@ -10,13 +10,13 @@
         <maven.compiler.target>13</maven.compiler.target>
     </properties>
 
-    <groupId>com.lacroix.lacroixnet</groupId>
+    <groupId>com.psg.projectobjectboard</groupId>
     <artifactId>consoleuserinterface</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
-            <groupId>com.lacroix.lacroixnet</groupId>
+            <groupId>com.psg.projectobjectboard</groupId>
             <artifactId>nucleus</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
